# Ableton2ML

./: .gitignore  CMakeLists.txt  INTEGRATION_SUCCESS.md  LICENSE  QUICKSTART.md  README.md  TERRAFORM_DEPLOYMENT.md  TEST_RESULTS.md  project_structure_script.sh  requirements.txt  requirements_simple.txt  test_server.py
docs/: BUILD.md  USAGE.md
examples/: basic_client.py
plugins/: Ableton2ML.amxd  Ableton2ML_Audio_Processor.amxd  Ableton2ML_Cloud.amxd  Ableton2ML_Compatible.amxd  Ableton2ML_Full.amxd  Ableton2ML_MIDI_Generator.amxd  Ableton2ML_MIDI_Generator_Fixed.amxd  Ableton2ML_Simple.adv  Ableton2ML_Simple.amxd  Ableton2ML_Test.amxd  Ableton2ML_Working.amxd  CLOUD_INTEGRATION.md  INSTALLATION_GUIDE.md  README.md
scripts/: deploy_to_gcloud.sh  manage_infrastructure.sh
server/: magenta_server.py  ml_training_server.py  requirements.txt
src/: NetworkManager.h  NetworkProtocol.h  SendLearnEditor.h  SendLearnProcessor.h
terraform/: README.md  deploy.sh  main.tf  outputs.tf  startup-script.sh  terraform.tfvars.example  variables.tf
